// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mini ShoppingBag Components:  ItemsContainer  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  min-width: 100%;
  overflow-y: auto;
  -ms-overflow-style: auto;
  -webkit-scrollbar-width: auto;
  -moz-scrollbar-width: auto;
  -ms-scrollbar-width: auto;
  scrollbar-width: auto;
  max-width: 19.875rem;
  border-bottom: 0.0625rem solid #eaeaea;
  background-color: #f7f7f7;
}

.c0 > div:first-child {
  border-top: 0;
}

.c0::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 0.475rem;
}

.c0::-webkit-scrollbar-thumb {
  border-radius: 0.25rem;
  background-color: rgba(0,0,0,0.5);
  box-shadow: 0 0 1px rgba(255,255,255,0.5);
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  MiniShoppingBagContainer  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 0.25rem;
  background-color: #f7f7f7;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  PriceWrapper  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: #f7f7f7;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  PromotionWrapper  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem 1rem 0 1rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Mini ShoppingBag Components:  StandardDeliveryContainer  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  font-size: 0.75rem;
  padding: 0 1rem 0.5rem 1.125rem;
  border-bottom: .0625rem solid #9e9e9e;
}

.c0.c0 > p {
  font-size: 0.75rem;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.5;
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  word-break: break-all;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
